--- a/style.css
+++ b/style.css
@@ -5,101 +5,170 @@
 }
 
 :root{
-    --green: hsl(75, 94%, 57%);
     --white: hsl(0, 0%, 100%);
-    --dark-grey: hsl(0, 0%, 12%);
-    --grey: hsl(0, 0%, 20%);
-    --off-black: hsl(0, 0%, 8%);
+    --rosewhite: hsl(330, 100%, 98%);
+    --eggshell: hsl(30, 54%, 90%);
+    --lightgrey: hsl(30, 18%, 87%);
+    --wengebrown: hsl(30, 10%, 34%);
+    --darkcharcoal: hsl(24, 5%, 18%);
+    --nutmeg: hsl(14, 45%, 36%);
+    --darkraspberry: hsl(332, 51%, 32%);
 }
 
+
 body{
-    background-color: var(--off-black);
+    background-color: var(--eggshell);
     min-height: 100vh;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Outfit', sans-serif;
     display: grid;
     place-content: center;
 }
 
+img{
+    width: 100%;
+    display: block;
+    border-radius: 1rem;
+}
+
 .card{
-    background-color: var(--dark-grey);
-    width: 300px;
-    height: 500px;
-    padding: 1.5rem;
+    background-color: var(--white);
+    max-width: 680px;
+    padding: 2.4rem;
     margin: 1rem;
     position: relative;
-    border-radius: .5rem;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+    border-radius: 1rem;
 }
 
-img{
-    width: 75px;
-    border-radius: 50px;
+.recipe h1{
+    font-family: 'Young serif', sans-serif;
+    font-weight: 400;
+    margin-top: 1rem;
+    color: var(--darkcharcoal);
 }
 
-.image{
-    padding-top: 1rem;
-    margin-bottom: 1rem;
+.description{
+    font-size: 15px;
+    font-weight: 450;
+    color: var(--wengebrown);
+    line-height: 1.5;
+    margin-top: 1rem;
+    padding-bottom: 2rem;
 }
 
-
-.name h2{
-  font-size: 17px; 
-  color: var(--white); 
-  font-weight: 700;
-  margin-bottom: .5rem;
+.preptime{
+    background-color: var(--rosewhite);
+    padding: 1rem;
+    border-radius: 1rem;
+    padding-left: 2rem;
 }
 
-.name p{
-    font-size: 10px;
-    font-weight: 600;
-    color: var(--green);
-    margin-bottom: 1rem;
-    padding-left: 5px;
+.preptime ul li::marker{
+    color: var(--darkraspberry);
+    border-radius: 1rem;
 }
-
-p{
-   font-size: 11px;
-   color: var(--white);
-   font-weight: 400;
-   margin-bottom: 1rem;
-   
-}
-
-
-
-.links li {
-    display: flex;
-    flex-direction: column;
-    padding: 10px 20px;
-    background-color: var(--grey);
-    color: var(--white);
-    text-decoration: none; 
-    border-radius: 5px;
-    border: none;
-    margin-top: .5rem;
-    margin-bottom: 1rem;
-    transition: background-color 0.3s;
-    width: 100%;
-  }
-
-  
-  li:hover {
-    background-color: var(--green);
-  }
-
-  
-
-  .links li a{
-    color: var(--white);
-    font-family: 'Inter' sans-serif;
+.preptime h2{
+    font-size: 17px;
     font-weight: 700;
-    font-size: 12px;
-    text-decoration: none;
-  }
+    margin-top: .5rem;
+    color: var(--darkraspberry);
+}
+.preptime li, .ingredients li, .instructions p{
+    font-size: 15px;
+    margin: 1rem;
+    color: var(--wengebrown);
+}
 
-  .links li a:hover{
-    color: var(--off-black);
-  }
-  
+.preptime li{
+    margin-right: 2rem;
+    padding-left: 1rem;
+}
+
+
+.ingredients h2, .instructions h2 , .nutrition h2{
+    color: var(--nutmeg);
+    font-family: 'Young serif', sans-serif;
+    font-weight: 500;
+    font-size: 25px;
+    margin-top: 2rem;
+}
+
+.ingredients, .instructions{ 
+    border-bottom: 1px solid var(--lightgrey);
+    padding-bottom: 1rem;
+}
+.ingredients li{
+    color: var(--wengebrown);
+    padding-left: .5rem;
+}
+
+.ingredients ul{
+    padding-left: 1rem;
+}
+
+
+.instructions h2{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.ingredients ul li::marker{
+    color: var(--nutmeg);
+}
+
+.num{
+    margin-top: .5rem;
+    margin-right: .5rem;
+}
+.instructions .item .num{
+    color: var(--nutmeg);
+    padding-right: 0;
+}
+
+.instructions .item{
+    display: flex;
+}
+
+.instructions .item p{
+    font-size: 15px;
+    margin: .5rem;
+    line-height: 1.5;
+}
+
+.table{
+    margin-top: 0;
+}
+
+.table .item{
+    color: var(--wengebrown);
+    padding: .75rem 2rem;
+    display: flex;
+    border-bottom: 1px solid var(--lightgrey);
+}
+
+.table .item:last-child{
+    border-bottom: 0;
+}
+
+.table .item p:nth-child(2){
+    color: var(--nutmeg);
+    font-weight: 700;
+}
+
+.table .item >*{
+    width: 100px;
+    margin-right: auto;
+}
+
+
+@media (max-width:540px){
+    h1{
+        margin-top: 2rem;
+    }
+    .card{
+        margin: 0;
+    }
+    .container .card img{
+        padding: 0;
+        border-radius: 0;
+    }
+}
