--- a/style.css
+++ b/style.css
@@ -1,174 +1,187 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
 :root{
-    --white: hsl(0, 0%, 100%);
-    --rosewhite: hsl(330, 100%, 98%);
-    --eggshell: hsl(30, 54%, 90%);
-    --lightgrey: hsl(30, 18%, 87%);
-    --wengebrown: hsl(30, 10%, 34%);
-    --darkcharcoal: hsl(24, 5%, 18%);
-    --nutmeg: hsl(14, 45%, 36%);
-    --darkraspberry: hsl(332, 51%, 32%);
+  --very-dark-blue: hsl(212, 21%, 14%);
+  --dark-grayish-blue: hsl(228, 12%, 48%);
+  --white: hsl(0, 0%, 100%);
+  --dark-cyan: hsl(158, 36%, 37%);
+  --cream: hsl(30, 38%, 92%);
+
 }
 
 
-body{
-    background-color: var(--eggshell);
-    min-height: 100vh;
-    font-family: 'Outfit', sans-serif;
-    display: grid;
-    place-content: center;
+body {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: var(--cream);
+    margin: 0;
 }
 
-img{
+.card {
+    display: flex;
+    background-color: white;
+    border-radius: 8px;
+    overflow: hidden;
+    max-width: 600px;
     width: 100%;
-    display: block;
-    border-radius: 1rem;
 }
 
-.card{
-    background-color: var(--white);
-    max-width: 680px;
-    padding: 2.4rem;
-    margin: 1rem;
-    position: relative;
-    border-radius: 1rem;
+ .image {
+    flex: 1;
 }
 
-.recipe h1{
-    font-family: 'Young serif', sans-serif;
-    font-weight: 400;
-    margin-top: 1rem;
-    color: var(--darkcharcoal);
+.image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
-.description{
-    font-size: 15px;
-    font-weight: 450;
-    color: var(--wengebrown);
-    line-height: 1.5;
-    margin-top: 1rem;
-    padding-bottom: 2rem;
-}
-
-.preptime{
-    background-color: var(--rosewhite);
-    padding: 1rem;
-    border-radius: 1rem;
-    padding-left: 2rem;
-}
-
-.preptime ul li::marker{
-    color: var(--darkraspberry);
-    border-radius: 1rem;
-}
-.preptime h2{
-    font-size: 17px;
-    font-weight: 700;
-    margin-top: .5rem;
-    color: var(--darkraspberry);
-}
-.preptime li, .ingredients li, .instructions p{
-    font-size: 15px;
-    margin: 1rem;
-    color: var(--wengebrown);
-}
-
-.preptime li{
+.content {
+    flex: 1;
+    margin-left: 2rem;
     margin-right: 2rem;
-    padding-left: 1rem;
+    
 }
 
-
-.ingredients h2, .instructions h2 , .nutrition h2{
-    color: var(--nutmeg);
-    font-family: 'Young serif', sans-serif;
-    font-weight: 500;
-    font-size: 25px;
+.content h2 {
     margin-top: 2rem;
+    font-family: 'Montserrat' sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 4px;
+    color: var(--dark-grayish-blue);
+
 }
 
-.ingredients, .instructions{ 
-    border-bottom: 1px solid var(--lightgrey);
-    padding-bottom: 1rem;
-}
-.ingredients li{
-    color: var(--wengebrown);
-    padding-left: .5rem;
-}
-
-.ingredients ul{
-    padding-left: 1rem;
-}
-
-
-.instructions h2{
+.content h3{
+    font-family: 'Fraunces', sans-serif ;
+    font-weight: 700;
+    color: var(--very-dark-blue);
+    font-size: 36px;
+    line-height: 1;
     margin-top: 1rem;
-    margin-bottom: 1rem;
-}
 
-.ingredients ul li::marker{
-    color: var(--nutmeg);
+}
+.content p{
+    color: var(--dark-grayish-blue);
+    line-height: 1.6;
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: .2px;
+    margin-top: -1rem;
 }
 
 .num{
-    margin-top: .5rem;
-    margin-right: .5rem;
-}
-.instructions .item .num{
-    color: var(--nutmeg);
-    padding-right: 0;
-}
-
-.instructions .item{
     display: flex;
+    margin-top: -3rem;
+    padding-top: 1rem;
 }
 
-.instructions .item p{
-    font-size: 15px;
-    margin: .5rem;
-    line-height: 1.5;
-}
 
-.table{
-    margin-top: 0;
-}
-
-.table .item{
-    color: var(--wengebrown);
-    padding: .75rem 2rem;
-    display: flex;
-    border-bottom: 1px solid var(--lightgrey);
-}
-
-.table .item:last-child{
-    border-bottom: 0;
-}
-
-.table .item p:nth-child(2){
-    color: var(--nutmeg);
+ .discount{
+    color: var(--dark-cyan);
+    font-size: 35px;
+    font-family:'Fraunces', sans-serif ;
     font-weight: 700;
+ }
+
+ .price{
+    color: var(--dark-grayish-blue);
+    font-size: 14px;
+    font-weight: 500;
+    padding-left: 1.5rem;
+    padding-top: 2rem;
+    text-decoration: line-through;
+    
+ }
+
+.cart{
+    margin-bottom: 2rem;
+    margin-top: -2rem;
+    padding-top: 1rem;
+}
+.cart .button {
+    display: flex;
+    background-color: var(--dark-cyan);
+    border: none;
+    color: white;
+    padding: 2px 50px;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 12px;
+    padding-right: 2rem;
 }
 
-.table .item >*{
-    width: 100px;
-    margin-right: auto;
+.cart .button img{
+    width: 17px;
+    padding-right: 1rem;
+    padding-left: 1rem;
 }
 
-
-@media (max-width:540px){
-    h1{
-        margin-top: 2rem;
-    }
-    .card{
-        margin: 0;
-    }
-    .container .card img{
-        padding: 0;
-        border-radius: 0;
-    }
+.cart .button h5{
+    font-size: 14px;
+    font-weight: 600;
+    font-family: 'Montserrat' sans-serif;
+    letter-spacing: .5px;
 }
+
+.cart .button:hover {
+    background-color:hsl(158, 37%, 27%);
+}
+/* Mobile design adjustments */
+@media (max-width: 430px) {
+    .card {
+      flex-direction: column;
+      width: 300px;
+      height: 570px;
+      border-radius: 10px;
+      margin-top: -4rem;
+    }
+  
+    .image {
+      width: 100%;
+      clip-path: inset(25% 0 25%);
+      margin-top: -116px;
+    }
+
+    .content {
+      margin-left: 1rem;
+      margin-right: 1rem;
+      margin-top: -8rem;
+    }
+
+    .content h2{
+        font-size: 12px;
+    }
+  
+    .content h3 {
+      font-size: 28px;
+    }
+
+    .content p{
+        font-size: 12px;
+        padding-right: -4rem;
+    }
+  
+    .discount {
+      font-size: 30px;
+    }
+  
+    .price {
+      padding-left: 1rem;
+      margin-top: 1rem;
+    }
+    .cart{
+        margin-bottom: 1rem;
+        margin-top: -2rem;
+    }
+    .cart .button {
+      padding: 1px 1px;
+      width: 100%;
+      justify-content: center;
+      line-height: .05;
+      height: auto;
+    }
+  }
