--- a/style.css
+++ b/style.css
@@ -1,187 +1,327 @@
-:root{
-  --very-dark-blue: hsl(212, 21%, 14%);
-  --dark-grayish-blue: hsl(228, 12%, 48%);
-  --white: hsl(0, 0%, 100%);
-  --dark-cyan: hsl(158, 36%, 37%);
-  --cream: hsl(30, 38%, 92%);
-
+*{
+     --red: hsl(0, 78%, 62%);
+    --cyan: hsl(180, 62%, 55%);
+    --orange: hsl(34, 97%, 64%);
+    --blue: hsl(212, 86%, 64%);
+    --very-dark-blue: hsl(234, 12%, 34%);
+    --grayish-blue: hsl(229, 6%, 66%);
+    --very-light-gray: hsl(0, 0%, 98%);
 }
 
-
 body {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 15px;
-    display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: var(--cream);
     margin: 0;
+    background-color:var(--very-light-gray);
+    font-family: "Poppins", sans-serif;
+    font-size: 15px;
+}
+
+.headline{
+    padding-top: 3rem;
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+    margin: 0;
+}
+
+.headline h2{
+    font-weight: 200;
+    font-size: 31px;
+    color: var(--very-dark-blue);
+    margin: 0;
+}
+
+.headline h3{
+font-weight: 600;
+font-size: 31px;
+color: var(--very-dark-blue);
+margin: 0;
+}
+
+.headline p{
+    color:var(--grayish-blue);
+    max-width: 450px;
+    font-size: 13px;
+    text-align: center;
+    padding-left: 33.5%;
+}
+
+.container {
+    display: grid;
+    grid-template-rows: 1fr auto 1fr;
+    grid-template-columns: 1fr 2rem 1fr;
+    width: 100%;
+    max-width: 600px;
+    height: 100%;
+    max-height: 600px;
+    margin: 0;
+    padding-top: 2rem;
+    padding-left: 0rem;
 }
 
 .card {
     display: flex;
-    background-color: white;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color:white;
+    width: 296px;
+    height: 210px;
+    margin: 0;
+    color: var(--grayish-blue);
+    font-size: 11px;
     border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    justify-items: center;
+    position: relative;
     overflow: hidden;
-    max-width: 600px;
-    width: 100%;
 }
 
- .image {
-    flex: 1;
-}
-
-.image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.content {
-    flex: 1;
-    margin-left: 2rem;
-    margin-right: 2rem;
-    
-}
-
-.content h2 {
-    margin-top: 2rem;
-    font-family: 'Montserrat' sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    letter-spacing: 4px;
-    color: var(--dark-grayish-blue);
-
-}
-
-.content h3{
-    font-family: 'Fraunces', sans-serif ;
-    font-weight: 700;
+.card h4{
+    margin: 0;
+    align-self: baseline;
     color: var(--very-dark-blue);
-    font-size: 36px;
-    line-height: 1;
+    font-size: 17px;
+    margin-left: 2rem;
     margin-top: 1rem;
 
 }
-.content p{
-    color: var(--dark-grayish-blue);
-    line-height: 1.6;
-    font-weight: 500;
-    font-size: 16px;
-    letter-spacing: .2px;
-    margin-top: -1rem;
+
+.card p{
+    margin: 0;
+    margin-left: 2rem;
+    margin-right: .5rem;
+    line-height: 1.8;
+    padding-top: .5rem;
+    padding-bottom: 2.5rem;
+    margin-right: 2rem;
 }
 
-.num{
-    display: flex;
-    margin-top: -3rem;
-    padding-top: 1rem;
+.card img{
+    align-self: flex-end;
+    margin-right: 1.5rem;
+    width: 55px;
+    padding-bottom: 1.5rem;
+}
+
+.card::before {
+    content: "";
+    position: absolute;
+    top : 0;
+    left: 0;
+    width: 100%;
+    height: 3px; /* Height of the colored strip */
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
+
+.card:nth-child(1)::before {
+    background-color: var(--cyan); /* Color for Card 1 */
+}
+
+.card:nth-child(2)::before {
+    background-color: var(--red); /* Color for Card 2 */
+}
+
+.card:nth-child(3)::before {
+    background-color: var(--blue); /* Color for Card 3 */
+}
+
+.card:nth-child(4)::before {
+    background-color: var(--orange); /* Color for Card 4 */
 }
 
 
- .discount{
-    color: var(--dark-cyan);
-    font-size: 35px;
-    font-family:'Fraunces', sans-serif ;
-    font-weight: 700;
- }
-
- .price{
-    color: var(--dark-grayish-blue);
-    font-size: 14px;
-    font-weight: 500;
-    padding-left: 1.5rem;
-    padding-top: 2rem;
-    text-decoration: line-through;
-    
- }
-
-.cart{
-    margin-bottom: 2rem;
-    margin-top: -2rem;
-    padding-top: 1rem;
-}
-.cart .button {
-    display: flex;
-    background-color: var(--dark-cyan);
-    border: none;
-    color: white;
-    padding: 2px 50px;
-    align-items: center;
-    cursor: pointer;
-    border-radius: 12px;
-    padding-right: 2rem;
+.container > :nth-child(1) {
+    grid-row: 2;
+    grid-column: 1;
+    margin-left: 13.1rem;
+    margin-top: -10rem;
 }
 
-.cart .button img{
-    width: 17px;
-    padding-right: 1rem;
-    padding-left: 1rem;
+.container > :nth-child(2) {
+    grid-row: 1;
+    grid-column: 2;
+    margin-left: 1.5rem;
 }
 
-.cart .button h5{
-    font-size: 14px;
-    font-weight: 600;
-    font-family: 'Montserrat' sans-serif;
-    letter-spacing: .5px;
+.container > :nth-child(3) {
+    grid-row: 2;
+    grid-column: 3;
+    margin-left: 19.5rem;
+    margin-top: -10rem;
 }
 
-.cart .button:hover {
-    background-color:hsl(158, 37%, 27%);
+.container > :nth-child(4) {
+    grid-row: 3;
+    grid-column: 2;
+    margin-left: 1.5rem;
+    margin-top: -6rem;
 }
-/* Mobile design adjustments */
-@media (max-width: 430px) {
-    .card {
-      flex-direction: column;
-      width: 300px;
-      height: 570px;
-      border-radius: 10px;
-      margin-top: -4rem;
+
+@media (max-width: 1440px) {
+    /* Styles for screens up to 1440px wide */
+}
+
+@media (max-width: 1024px) {
+    .headline p {
+        padding-left: 28.5%;
     }
-  
-    .image {
-      width: 100%;
-      clip-path: inset(25% 0 25%);
-      margin-top: -116px;
+    .container > :nth-child(1) {
+        grid-row: 2;
+        grid-column: 1;
+        margin-left: 1.1rem;
+    }
+}
+
+@media (max-width: 768px) {
+    body{
+        align-items: center;
+        padding-left: 7rem;
     }
 
-    .content {
-      margin-left: 1rem;
-      margin-right: 1rem;
-      margin-top: -8rem;
+    .headline{
+        padding-left: 2rem ;
+    }
+    .headline h2, .headline h3{
+        padding-left: 5rem;
+    }
+    .headline p {
+        padding-left: 21.5%;
+    }
+    .container {
+        grid-template-rows: auto auto auto auto;
+        grid-template-columns: 1fr;
+        max-width: 100%;
+        max-height: none;
+        padding-left: 14rem;
     }
 
-    .content h2{
-        font-size: 12px;
-    }
-  
-    .content h3 {
-      font-size: 28px;
-    }
-
-    .content p{
-        font-size: 12px;
-        padding-right: -4rem;
-    }
-  
-    .discount {
-      font-size: 30px;
-    }
-  
-    .price {
-      padding-left: 1rem;
-      margin-top: 1rem;
-    }
-    .cart{
+    .container > :nth-child(1),
+    .container > :nth-child(2),
+    .container > :nth-child(3),
+    .container > :nth-child(4) {
+        grid-column: 1;
+        grid-row: auto;
         margin-bottom: 1rem;
-        margin-top: -2rem;
+        margin-top: 0;
     }
-    .cart .button {
-      padding: 1px 1px;
-      width: 100%;
-      justify-content: center;
-      line-height: .05;
-      height: auto;
+
+    .container > :nth-child(2) {
+        margin-left: 1.1rem;
+        margin-top: 1rem;
     }
-  }
+
+    .container > :nth-child(3){
+        margin-top: 16.5rem;
+        margin-left: 1.1rem;
+    }
+
+    .container > :nth-child(4){
+        margin-top: -29.5rem;
+        margin-left: 1.1rem;
+    }
+
+    .attribution {
+        padding-top: 6rem;
+        padding-left: 7rem;
+    }
+}
+
+@media (max-width: 576px) {
+    .card {
+        font-size: 14px;
+        padding: 15px; /* Adjust padding for smaller screens */
+    }
+
+    .card::before {
+        height: 12px; /* Adjust strip height for smaller screens */
+    }
+}
+
+@media (max-width: 375px) {
+    body{
+        align-items: center;
+        padding-left: .8rem;
+    }
+
+    .headline h2, .headline h3{
+        width: 300px;
+        font-size: 24px;
+        padding-left: 5px;
+    }
+    .headline p {
+        width: 300px;
+        font-size: 15px;
+        padding-left: .1rem;
+    }
+
+    .card {
+        width: 290px;
+        height: 190px;
+        font-size: 8px;
+        padding: 10px; /* Adjust padding for smaller screens */
+
+    }
+
+    .card h4{
+        margin-top: 2rem;
+        font-size: 22px;
+        margin-left: 1rem;
+    }
+
+    .card p{
+        font-size: 13px;
+        margin-bottom: 0;
+        margin-left: 1rem;
+    }
+
+    .card img{
+        width: 60px;
+    }
+
+    .card::before {
+        height: 4px; /* Adjust strip height for smaller screens */
+    }
+    .container {
+        grid-template-rows: auto auto auto auto;
+        grid-template-columns: 1fr;
+        max-width: 375px;
+        max-height: none;
+        margin: 0;
+        padding-left: 0rem;
+        padding-right: 1rem;
+
+    }
+
+    .container > :nth-child(1),
+    .container > :nth-child(2),
+    .container > :nth-child(3),
+    .container > :nth-child(4) {
+        grid-column: 1;
+        grid-row: auto;
+        margin-bottom: 1rem;
+        margin-top: 0;
+    }
+
+    .container > :nth-child(2) {
+        margin-left: 1.1rem;
+        margin-top: 1rem;
+    }
+
+    .container > :nth-child(3){
+        margin-top: 16.5rem;
+        margin-left: 1.1rem;
+    }
+
+    .container > :nth-child(4){
+        margin-top: -29.5rem;
+        margin-left: 1.1rem;
+    }
+
+    .attribution {
+        padding-top: 1rem;
+        padding-left: 0;
+    }
+}
