--- a/style.css
+++ b/style.css
@@ -1,327 +1,241 @@
 *{
-     --red: hsl(0, 78%, 62%);
-    --cyan: hsl(180, 62%, 55%);
-    --orange: hsl(34, 97%, 64%);
-    --blue: hsl(212, 86%, 64%);
-    --very-dark-blue: hsl(234, 12%, 34%);
-    --grayish-blue: hsl(229, 6%, 66%);
-    --very-light-gray: hsl(0, 0%, 98%);
+    --moderate-violet: hsl(263, 55%, 52%);
+    --very-dark-grayish-blue: hsl(217, 19%, 35%);
+    --very-dark-blackish-blue: hsl(219, 29%, 14%);
+    --white: hsl(0, 0%, 100%);
+    --light-gray: hsl(0, 0%, 81%);
+    --light-grayish-blue: hsl(210, 46%, 95%);  
 }
 
 body {
+    display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
-    background-color:var(--very-light-gray);
-    font-family: "Poppins", sans-serif;
-    font-size: 15px;
-}
-
-.headline{
-    padding-top: 3rem;
-    text-align: center;
-    font-family: "Poppins", sans-serif;
-    margin: 0;
-}
-
-.headline h2{
-    font-weight: 200;
-    font-size: 31px;
-    color: var(--very-dark-blue);
-    margin: 0;
-}
-
-.headline h3{
-font-weight: 600;
-font-size: 31px;
-color: var(--very-dark-blue);
-margin: 0;
-}
-
-.headline p{
-    color:var(--grayish-blue);
-    max-width: 450px;
+    background-color:var(--light-grayish-blue);
+    font-family: "Barlow Semi Condensed", sans-serif;
+    font-weight: 500;
     font-size: 13px;
-    text-align: center;
-    padding-left: 33.5%;
 }
 
-.container {
+.container{
+    margin-top: .3rem;
+    margin-left: 5rem;
     display: grid;
-    grid-template-rows: 1fr auto 1fr;
-    grid-template-columns: 1fr 2rem 1fr;
-    width: 100%;
-    max-width: 600px;
-    height: 100%;
-    max-height: 600px;
-    margin: 0;
-    padding-top: 2rem;
-    padding-left: 0rem;
+    max-width: 1150px;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, min-content);
+    grid-gap: 25px;
 }
 
-.card {
+.card{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    background-color: var(--very-dark-blackish-blue);
+    border-radius: 12px;
+    padding: 10px 15px;
+}
+
+.card1{
+    grid-column: 1/3;
+    background-color: var(--moderate-violet);
+    background-image:url('/images/bg-pattern-quotation.svg');
+    background-repeat: no-repeat;
+    background-position: top left 22rem;
+
+}
+
+.card2{
+    grid-column: 3/4;
+    background-color: var(--very-dark-grayish-blue);
+}
+
+.card3{
+    grid-row: 2/3;
+    grid-column: 1/2;
+    background-color: var(--white);
+}
+
+.card4{ 
+    grid-row: 2/3;
+    grid-column: 2/4;
+}
+
+.card5{ 
+    grid-row: -1/1;
+    grid-column: 4/5;
+    background-color: var(--white);
+}
+
+.profile{
+    display: flex;
     align-items: center;
-    background-color:white;
-    width: 296px;
-    height: 210px;
+    color: var(--light-gray);
+    padding-left: 1rem;
+
+}
+
+.profile img{
+    width: 32px;
+    border-radius: 50%;
+}
+
+.detail{
     margin: 0;
-    color: var(--grayish-blue);
-    font-size: 11px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    justify-items: center;
-    position: relative;
-    overflow: hidden;
+    padding-left: 1rem;
+    margin-top: -1rem;
+    padding-top: .2rem;
+    line-height: 1.5;
 }
 
-.card h4{
-    margin: 0;
-    align-self: baseline;
-    color: var(--very-dark-blue);
-    font-size: 17px;
-    margin-left: 2rem;
-    margin-top: 1rem;
-
+.detail h6{
+    font-size: 12px;
+}
+.detail h5{
+    font-size: 10px;
+    opacity: 50%;
+    margin-top: -1.7rem;
 }
 
-.card p{
-    margin: 0;
-    margin-left: 2rem;
-    margin-right: .5rem;
-    line-height: 1.8;
-    padding-top: .5rem;
-    padding-bottom: 2.5rem;
-    margin-right: 2rem;
+.testimony{
+    padding-left: 1rem;
 }
 
-.card img{
-    align-self: flex-end;
-    margin-right: 1.5rem;
-    width: 55px;
-    padding-bottom: 1.5rem;
+.testimony h4{
+    color: var(--white);
+    font-size: 20px;
+    font-weight: 500;
+    max-width: 30rem;
+    margin-top: 0;
+    padding-bottom: 1rem;
 }
 
-.card::before {
-    content: "";
-    position: absolute;
-    top : 0;
-    left: 0;
-    width: 100%;
-    height: 3px; /* Height of the colored strip */
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
+.testimony p{
+    color: var(--light-gray);
+    max-width: 29.5rem;
+    margin-top: -1rem;
+    line-height: 1.5;
+    font-weight: 400;
 }
 
-.card:nth-child(1)::before {
-    background-color: var(--cyan); /* Color for Card 1 */
+.card2 .testimony p{
+    max-width: 12rem;
 }
 
-.card:nth-child(2)::before {
-    background-color: var(--red); /* Color for Card 2 */
+.card4 .testimony p{
+    color: var(--white);
+    opacity: 80%;
+    font-family: 500;
 }
 
-.card:nth-child(3)::before {
-    background-color: var(--blue); /* Color for Card 3 */
+.card3 .detail, .card5 .detail {
+    color: var(--very-dark-grayish-blue);
 }
 
-.card:nth-child(4)::before {
-    background-color: var(--orange); /* Color for Card 4 */
+.card3 .testimony h4, .card5 .testimony h4{
+    color: var(--very-dark-grayish-blue);
+    max-width: 11rem;
 }
 
-
-.container > :nth-child(1) {
-    grid-row: 2;
-    grid-column: 1;
-    margin-left: 13.1rem;
-    margin-top: -10rem;
+.card3 .testimony p, .card5 .testimony p{
+    color: var(--very-dark-grayish-blue);
+    opacity: 70%;
+    max-width: 12rem;
 }
 
-.container > :nth-child(2) {
-    grid-row: 1;
-    grid-column: 2;
-    margin-left: 1.5rem;
-}
-
-.container > :nth-child(3) {
-    grid-row: 2;
-    grid-column: 3;
-    margin-left: 19.5rem;
-    margin-top: -10rem;
-}
-
-.container > :nth-child(4) {
-    grid-row: 3;
-    grid-column: 2;
-    margin-left: 1.5rem;
-    margin-top: -6rem;
-}
-
-@media (max-width: 1440px) {
-    /* Styles for screens up to 1440px wide */
-}
-
-@media (max-width: 1024px) {
-    .headline p {
-        padding-left: 28.5%;
-    }
-    .container > :nth-child(1) {
-        grid-row: 2;
-        grid-column: 1;
-        margin-left: 1.1rem;
-    }
-}
-
-@media (max-width: 768px) {
-    body{
-        align-items: center;
-        padding-left: 7rem;
+@media (max-width:440px) {
+    .container{
+        max-width: 370px;
+        margin-top: 4rem;
+        margin-left: 3.4rem;
+        display: block;
+        gap: 2rem;
     }
 
-    .headline{
-        padding-left: 2rem ;
-    }
-    .headline h2, .headline h3{
-        padding-left: 5rem;
-    }
-    .headline p {
-        padding-left: 21.5%;
-    }
-    .container {
-        grid-template-rows: auto auto auto auto;
-        grid-template-columns: 1fr;
-        max-width: 100%;
-        max-height: none;
-        padding-left: 14rem;
+    .card{
+        font-size: 10px;
+        padding: 10px 10px;
+        width: 340px;
+        height: 470px;
     }
 
-    .container > :nth-child(1),
-    .container > :nth-child(2),
-    .container > :nth-child(3),
-    .container > :nth-child(4) {
-        grid-column: 1;
-        grid-row: auto;
-        margin-bottom: 1rem;
-        margin-top: 0;
+    .profile img{
+        width: 35px;
     }
 
-    .container > :nth-child(2) {
-        margin-left: 1.1rem;
-        margin-top: 1rem;
-    }
-
-    .container > :nth-child(3){
-        margin-top: 16.5rem;
-        margin-left: 1.1rem;
-    }
-
-    .container > :nth-child(4){
-        margin-top: -29.5rem;
-        margin-left: 1.1rem;
-    }
-
-    .attribution {
-        padding-top: 6rem;
-        padding-left: 7rem;
-    }
-}
-
-@media (max-width: 576px) {
-    .card {
+    .detail h6{
         font-size: 14px;
-        padding: 15px; /* Adjust padding for smaller screens */
+        padding-top: .5rem;
     }
 
-    .card::before {
-        height: 12px; /* Adjust strip height for smaller screens */
-    }
-}
-
-@media (max-width: 375px) {
-    body{
-        align-items: center;
-        padding-left: .8rem;
+    .detail h5{
+        font-size: 12px;
+        margin-top: -2.1rem;
     }
 
-    .headline h2, .headline h3{
-        width: 300px;
-        font-size: 24px;
-        padding-left: 5px;
+    .testimony{
+        padding-left: 1.5rem;
     }
-    .headline p {
-        width: 300px;
-        font-size: 15px;
-        padding-left: .1rem;
-    }
-
-    .card {
-        width: 290px;
-        height: 190px;
-        font-size: 8px;
-        padding: 10px; /* Adjust padding for smaller screens */
-
-    }
-
-    .card h4{
-        margin-top: 2rem;
+    .testimony h4{
         font-size: 22px;
-        margin-left: 1rem;
+        max-width: 17.8rem;
     }
 
-    .card p{
-        font-size: 13px;
-        margin-bottom: 0;
-        margin-left: 1rem;
+    .testimony p{
+        font-size: 14px;
+        margin-top: -1.5rem;
+        max-width: 16.7rem;
     }
 
-    .card img{
-        width: 60px;
+    .card1{
+        background-position: top right 2rem;
+        margin-bottom: 2rem;
     }
 
-    .card::before {
-        height: 4px; /* Adjust strip height for smaller screens */
+    .card1 .profile{
+        margin-top: -1rem;
     }
-    .container {
-        grid-template-rows: auto auto auto auto;
-        grid-template-columns: 1fr;
-        max-width: 375px;
-        max-height: none;
-        margin: 0;
-        padding-left: 0rem;
-        padding-right: 1rem;
-
+    .card1 .testimony{
+        margin-top: -0.5rem;
     }
 
-    .container > :nth-child(1),
-    .container > :nth-child(2),
-    .container > :nth-child(3),
-    .container > :nth-child(4) {
-        grid-column: 1;
-        grid-row: auto;
-        margin-bottom: 1rem;
-        margin-top: 0;
+    .card2{
+        height: 280px;
+        margin-bottom: 2rem;
     }
 
-    .container > :nth-child(2) {
-        margin-left: 1.1rem;
-        margin-top: 1rem;
+    .card2 .testimony p{
+        max-width: 18rem;
     }
 
-    .container > :nth-child(3){
-        margin-top: 16.5rem;
-        margin-left: 1.1rem;
+    .card3{
+        height: 280px;
+        margin-bottom: 2rem;
+    }
+    .card3 .testimony h4{
+        max-width: 15rem;
+    }
+    .card3 .testimony p{
+        max-width: 18rem;
+    }
+    .card4{
+        height: 430px;
+        margin-bottom: 2rem;
+
+    }
+    .card4 .testimony p{
+        max-width: 17.7rem;
     }
 
-    .container > :nth-child(4){
-        margin-top: -29.5rem;
-        margin-left: 1.1rem;
+    .card5{
+        height: 490px;
+        margin-bottom: 4rem;
     }
-
-    .attribution {
-        padding-top: 1rem;
-        padding-left: 0;
+    .card5 .testimony h4{
+        max-width: 18rem;
+    }
+    .card5 .testimony p{
+        max-width: 17.6rem;
     }
 }
